k8s/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: taskflow-ingress

spec:
  rules:
    - host: taskflow.local

      http:
        paths:
          # API requests should be routed to backend
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5001

          # All other requests go to the frontend SPA
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 5173
